mozilla/gcli/ui/gcliterm.css
.gcliterm-input-node,
.gcliterm-complete-node {
  border: none;
  -moz-appearance: none;
  height: 100%;
  vertical-align: middle;
  background-color: transparent;
  font: 12px Consolas, "Lucida Console", monospace;
  padding: 2px 0 0 16px;
}

.gcliterm-complete-node {
  color: #FFF;
  padding: 4px 4px 2px 21px;
}

.gcliVALID {
  border-bottom: none;
}

.gcliINCOMPLETE {
  color: #DDD;
  border-bottom: 1px dotted #999;
}

.gcliERROR {
  color: #DDD;
  border-bottom: 1px dotted #F00;
}

.gcliCompl {
  color: #999;
}

.gcliterm-stack-node {
  background: url("chrome://global/skin/icons/commandline.png") 4px center no-repeat;
  width: 100%;
}

.gcliterm-hint-node {
  color: #000;
  background: rgba(250, 250, 250, 0.8);
  border: 1px solid #AAA;
  border-bottom: 0px !important;
  border-top-right-radius: 5px;
  border-top-left-radius: 5px;
  margin-left: 10px;
  margin-right: 10px;
  display: inline-block;
  overflow: auto;
  padding: 10px;
}

.gcliterm-hint-parent {
  border-bottom: 1px solid #AAA;
}

.gcliCmdHelpRight {
  text-align: right;
}

